apps/base/hubzilla/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hubzilla
    namespace: hubzilla
spec:
    replicas: 1
    selector:
        matchLabels:
            app: hubzilla
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 25%
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: hubzilla
        spec:
            containers:
                - image: ghcr.io/saiwal/hubzilla-docker:latest
                  imagePullPolicy: Always
                  name: hubzilla
                  livenessProbe:
                    failureThreshold: 3
                    httpGet:
                        path: /
                        port: 80
                  readinessProbe:
                    httpGet:
                        path: /
                        port: 80
                  resources:
                    requests:
                        ephemeral-storage: 1024Mi
                        cpu: 100m
                        memory: 200Mi
                    limits:
                        ephemeral-storage: 2048Mi
                        cpu: 2000m
                        memory: 2000Mi
                  securityContext:
                    allowPrivilegeEscalation: false
                    capabilities:
                        drop:
                            - ALL
                        add:
                            - NET_BIND_SERVICE
                            - CHOWN
                            - SETGID
                            - SETUID
                    readOnlyRootFilesystem: false
                    #runAsNonRoot: true
                  volumeMounts:
                    - mountPath: /var/www/html
                      name: hubzilla-data
                    - mountPath: /tmp
                      name: tmp
            volumes:
                - name: hubzilla-data
                  persistentVolumeClaim:
                    claimName: hubzilla-data
                - name: tmp
                  emptyDir:
                    sizeLimit: 2048Mi
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: hubzilla
    name: hubzilla-srv
    namespace: hubzilla
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: hubzilla
    type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: hubzilla
    namespace: hubzilla
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - "hub.mtrnord.blog"
    rules:
        - backendRefs:
            - name: hubzilla-srv
              port: 80
